@@ -15,6 +15,8 @@
  */
 package io.micronaut.data.model;
 
+import io.micronaut.core.annotation.NonNull;
+import io.micronaut.core.annotation.Nullable;
 import io.micronaut.core.beans.BeanIntrospection;
 import io.micronaut.core.naming.NameUtils;
 import io.micronaut.core.util.ArgumentUtils;
@@ -24,11 +26,13 @@ import io.micronaut.data.annotation.Embeddable;
 import io.micronaut.data.model.naming.NamingStrategy;
 import io.micronaut.data.model.runtime.RuntimePersistentEntity;
 
-import io.micronaut.core.annotation.NonNull;
-import io.micronaut.core.annotation.Nullable;
-
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Optional;
 
 import static io.micronaut.data.model.AssociationUtils.CAMEL_CASE_SPLIT_PATTERN;
 
@@ -39,7 +43,6 @@ import static io.micronaut.data.model.AssociationUtils.CAMEL_CASE_SPLIT_PATTERN;
  * @author Graeme Rocher
  * @since 1.0
  */
-@SuppressWarnings("rawtypes")
 public interface PersistentEntity extends PersistentElement {
 
     /**
@@ -89,6 +92,24 @@ public interface PersistentEntity extends PersistentElement {
     @Nullable PersistentProperty getIdentity();
 
     /**
+     * Returns all identity properties.
+     *
+     * @return The identity properties
+     */
+    @NonNull
+    default List<PersistentProperty> getIdentityProperties() {
+        if (getIdentity() != null) {
+            return List.of(getIdentity());
+        } else {
+            PersistentProperty[] compositeIdentity = getCompositeIdentity();
+            if (compositeIdentity != null) {
+                return List.of(compositeIdentity);
+            }
+        }
+        return List.of();
+    }
+
+    /**
      * Returns the version property.
      *
      * @return the property
@@ -122,7 +143,7 @@ public interface PersistentEntity extends PersistentElement {
                 .stream()
                 .filter(bp -> bp instanceof Association)
                 .map(bp -> (Association) bp)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -133,18 +154,28 @@ public interface PersistentEntity extends PersistentElement {
      */
     default @NonNull Collection<Embedded> getEmbedded() {
         return getPersistentProperties().stream()
-                .filter(p -> p instanceof Embedded)
+                .filter(PersistentProperty::isEmbedded)
                 .map(p -> (Embedded) p)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
-     * Obtains a PersistentProperty instance by name.
+     * Gets a PersistentProperty instance by name.
      *
      * @param name The name of the property
      * @return The PersistentProperty or null if it doesn't exist
      */
-    @Nullable PersistentProperty getPropertyByName(String name);
+    @Nullable
+    PersistentProperty getPropertyByName(String name);
+
+    /**
+     * Gets a PersistentProperty instance by name ignoring the case.
+     *
+     * @param name The name of the property
+     * @return The PersistentProperty or null if it doesn't exist
+     */
+    @Nullable
+    PersistentProperty getPropertyByNameIgnoreCase(String name);
 
     /**
      * Obtains an identity PersistentProperty instance by name.
@@ -219,7 +250,7 @@ public interface PersistentEntity extends PersistentElement {
     default Optional<String> getPath(String camelCasePath) {
         List<String> path = Arrays.stream(CAMEL_CASE_SPLIT_PATTERN.split(camelCasePath))
                                   .map(NameUtils::decapitalize)
-                                  .collect(Collectors.toList());
+                                  .toList();
 
         if (CollectionUtils.isNotEmpty(path)) {
             Iterator<String> i = path.iterator();
