@@ -41,7 +41,7 @@ import io.micronaut.data.model.PersistentEntityUtils;
 import io.micronaut.data.model.PersistentProperty;
 import io.micronaut.data.model.PersistentPropertyPath;
 import io.micronaut.data.model.Sort;
-import io.micronaut.data.model.jpa.criteria.impl.LiteralExpression;
+import io.micronaut.data.model.jpa.criteria.impl.expression.LiteralExpression;
 import io.micronaut.data.model.naming.NamingStrategy;
 import io.micronaut.data.model.query.AssociationQuery;
 import io.micronaut.data.model.query.BindingParameter;
@@ -377,7 +377,7 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
                     }
                 }
                 return (Runnable) () -> query.append(p);
-            }).collect(Collectors.toList()));
+            }).toList());
         };
     }
 
@@ -721,6 +721,18 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
      * @return The quoted name
      */
     protected String quote(String persistedName) {
+        return quote(persistedName, false);
+    }
+
+    /**
+     * Quote a persisted name (schema, table or column name) for the dialect.
+     *
+     * @param persistedName The persisted name.
+     * @param supportsDynamicValues Whether persisted name supports dynamic values. Schema and table can have
+     *                              dynamic value (like ${config.entry}) and columns can't.
+     * @return The quoted name
+     */
+    protected String quote(String persistedName, boolean supportsDynamicValues) {
         return "\"" + persistedName + "\"";
     }
 
@@ -774,11 +786,13 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
                         }
                         queryString.setLength(queryString.length() - 1);
                     } else if (entity.hasIdentity()) {
-                        PersistentProperty identity = entity.getIdentity();
-                        if (identity == null) {
+                        List<PersistentProperty> identityProperties = entity.getIdentityProperties();
+                        if (identityProperties.isEmpty()) {
                             throw new IllegalArgumentException(CANNOT_QUERY_ON_ID_WITH_ENTITY_THAT_HAS_NO_ID);
                         }
-                        appendPropertyProjection(annotationMetadata, queryState.getEntity(), queryString, asQueryPropertyPath(queryState.getRootAlias(), identity), null);
+                        for (PersistentProperty identity : identityProperties) {
+                            appendPropertyProjection(annotationMetadata, queryState.getEntity(), queryString, asQueryPropertyPath(queryState.getRootAlias(), identity), null);
+                        }
                     } else {
                         throw new IllegalArgumentException(CANNOT_QUERY_ON_ID_WITH_ENTITY_THAT_HAS_NO_ID);
                     }
@@ -1469,9 +1483,16 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
                 String jsonEntityColumn = getJsonEntityColumn(annotationMetadata);
                 if (jsonEntityColumn != null) {
                     sb.append(jsonEntityColumn).append(DOT);
+                    PersistentProperty property = propertyPath.getProperty();
+                    if (property == entity.getIdentity()) {
+                        sb.append("\"" + property.getPersistedName() + "\"");
+                    } else {
+                        sb.append(propertyPath.getPath());
+                    }
                 }
+            } else {
+                sb.append(propertyPath.getPath());
             }
-            sb.append(propertyPath.getPath());
         }
     }
 
@@ -1622,6 +1643,13 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
                 QueryPropertyPath propertyPath = entry.getKey();
                 if (entry.getValue() instanceof BindingParameter bindingParameter) {
                     traversePersistentProperties(propertyPath.getAssociations(), propertyPath.getProperty(), (associations, property) -> {
+                        boolean generated = property.isGenerated();
+                        if (generated && property.getOwner() != entity && !property.getOwner().isEmbeddable()) {
+                            generated = false;
+                        }
+                        if (generated) {
+                            return;
+                        }
                         String tableAlias = propertyPath.getTableAlias();
                         if (tableAlias != null) {
                             queryString.append(tableAlias).append(DOT);
@@ -1725,38 +1753,50 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
             if (propertyPath.getAssociations().isEmpty()) {
                 return new QueryPropertyPath(propertyPath, tableAlias);
             }
+            PersistentProperty property = propertyPath.getProperty();
             Association joinAssociation = null;
             StringJoiner joinPathJoiner = new StringJoiner(".");
             String lastJoinAlias = null;
             for (Association association : propertyPath.getAssociations()) {
-                joinPathJoiner.add(association.getName());
                 if (association instanceof Embedded) {
+                    joinPathJoiner.add(association.getName());
                     continue;
                 }
                 if (joinAssociation == null) {
+                    joinPathJoiner.add(association.getName());
                     joinAssociation = association;
                     continue;
                 }
-                if (association != joinAssociation.getAssociatedEntity().getIdentity()) {
-                    if (!queryState.isAllowJoins()) {
-                        throw new IllegalArgumentException("Joins cannot be used in a DELETE or UPDATE operation");
-                    }
-                    String joinStringPath = joinPathJoiner.toString();
-                    if (!queryState.isJoined(joinStringPath)) {
-                        throw new IllegalArgumentException("Property is not joined at path: " + joinStringPath);
-                    }
-                    lastJoinAlias = joinInPath(queryState, joinStringPath);
-                    // Continue to look for a joined property
-                    joinAssociation = association;
-                } else {
+                if (PersistentEntityUtils.isAccessibleWithoutJoin(association, propertyPath.getProperty())) {
                     // We don't need to join to access the id of the relation
-                    joinAssociation = null;
+                    if (lastJoinAlias == null) {
+                        String joinStringPath = joinPathJoiner.toString();
+                        if (!queryState.isJoined(joinStringPath)) {
+                            throw new IllegalArgumentException("Property is not joined at path: " + joinStringPath);
+                        }
+                        lastJoinAlias = joinInPath(queryState, joinPathJoiner.toString());
+                    }
+                    return new QueryPropertyPath(
+                        new PersistentPropertyPath(Collections.emptyList(), association),
+                        lastJoinAlias
+                    );
                 }
+
+                joinPathJoiner.add(association.getName());
+                if (!queryState.isAllowJoins()) {
+                    throw new IllegalArgumentException("Joins cannot be used in a DELETE or UPDATE operation" + (association.getAssociatedEntity().getIdentity() == propertyPath.getProperty()));
+                }
+                String joinStringPath = joinPathJoiner.toString();
+                if (!queryState.isJoined(joinStringPath)) {
+                    throw new IllegalArgumentException("Property is not joined at path: " + joinStringPath);
+                }
+                lastJoinAlias = joinInPath(queryState, joinStringPath);
+                // Continue to look for a joined property
+                joinAssociation = association;
             }
-            PersistentProperty property = propertyPath.getProperty();
             if (joinAssociation != null) {
                 // We don't need to join to access the id of the relation if it is not a foreign key association
-                if (property != joinAssociation.getAssociatedEntity().getIdentity() || joinAssociation.isForeignKey()) {
+                if (!PersistentEntityUtils.isAccessibleWithoutJoin(joinAssociation, propertyPath.getProperty())) {
                     String joinStringPath = joinPathJoiner.toString();
                     if (!queryState.isJoined(joinStringPath)) {
                         throw new IllegalArgumentException("Property is not joined at path: " + joinStringPath);
@@ -1768,7 +1808,7 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
                 if (lastJoinAlias != null) {
                     // 'joinPath.prop' should be represented as a path of 'prop' with a join alias
                     return new QueryPropertyPath(
-                        new PersistentPropertyPath(Collections.emptyList(), property, property.getName()),
+                        new PersistentPropertyPath(Collections.emptyList(), property),
                         lastJoinAlias
                     );
                 }
@@ -1967,8 +2007,6 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
         StringBuilder buff = new StringBuilder(ORDER_BY_CLAUSE);
         Iterator<Sort.Order> i = orders.iterator();
 
-        String jsonEntityColumn = getJsonEntityColumn(annotationMetadata);
-
         while (i.hasNext()) {
             Sort.Order order = i.next();
             String property = order.getProperty();
@@ -1976,59 +2014,9 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
             if (ignoreCase) {
                 buff.append("LOWER(");
             }
-            if (nativeQuery) {
-                buff.append(property);
-            } else {
-                PersistentPropertyPath path = entity.getPropertyPath(property);
-                if (path == null) {
-                    throw new IllegalArgumentException("Cannot sort on non-existent property path: " + property);
-                }
-                List<Association> associations = new ArrayList<>(path.getAssociations());
-                int assocCount = associations.size();
-                // If last association is embedded, it does not need to be joined to the alias since it will be in the destination table
-                // JPA/Hibernate is special case and in that case we leave association for specific handling below
-                if (assocCount > 0 && computePropertyPaths() && associations.get(assocCount - 1) instanceof Embedded) {
-                    associations.remove(assocCount - 1);
-                }
-                if (associations.isEmpty()) {
-                    buff.append(getAliasName(entity));
-                } else {
-                    StringJoiner joiner = new StringJoiner(".");
-                    for (Association association : associations) {
-                        joiner.add(association.getName());
-                    }
-                    String joinAlias = getAliasName(new JoinPath(joiner.toString(), associations.toArray(new Association[0]), Join.Type.DEFAULT, null));
-                    if (!computePropertyPaths()) {
-                        if (!query.contains(" " + joinAlias + " ") && !query.endsWith(" " + joinAlias)) {
-                            // Special hack case for JPA, Hibernate can join the relation with cross join automatically when referenced by the property path
-                            // This probably should be removed in the future major version
-                            buff.append(getAliasName(entity)).append(DOT);
-                            StringJoiner pathJoiner = new StringJoiner(".");
-                            for (Association association : associations) {
-                                pathJoiner.add(association.getName());
-                            }
-                            buff.append(pathJoiner);
-                        } else {
-                            buff.append(joinAlias);
-                        }
-                    } else {
-                        buff.append(joinAlias);
-                    }
-                }
-                buff.append(DOT);
-
-                if (jsonEntityColumn != null) {
-                    buff.append(jsonEntityColumn).append(DOT);
-                }
-
-                if (!computePropertyPaths() || jsonEntityColumn != null) {
-                    buff.append(path.getProperty().getName());
-                } else {
-                    buff.append(getColumnName(path.getProperty()));
-                }
-                if (ignoreCase) {
-                    buff.append(")");
-                }
+            buff.append(buildPropertyByName(property, query, entity, annotationMetadata, nativeQuery));
+            if (ignoreCase) {
+                buff.append(")");
             }
             buff.append(SPACE).append(order.getDirection());
             if (i.hasNext()) {
@@ -2042,6 +2030,81 @@ public abstract class AbstractSqlLikeQueryBuilder implements QueryBuilder {
             Collections.emptyList(),
             Collections.emptyMap()
         );
+    }
+
+    /**
+     * Encode the given property retrieval into a query instance.
+     * For example, property name might be encoded as {@code `person_.name`} using
+     * its path and table's alias.
+     *
+     * @param propertyName The name of the property
+     * @param query The query
+     * @param entity The root entity
+     * @param annotationMetadata The annotation metadata
+     * @param nativeQuery Whether the query is native query, in which case the property name will be supplied by the user and not verified
+     * @return The encoded query
+     */
+    public String buildPropertyByName(
+            @NonNull String propertyName, @NonNull String query,
+            @NonNull PersistentEntity entity, @NonNull AnnotationMetadata annotationMetadata,
+            boolean nativeQuery
+    ) {
+        if (nativeQuery) {
+            return propertyName;
+        }
+
+        PersistentPropertyPath path = entity.getPropertyPath(propertyName);
+        if (path == null) {
+            throw new IllegalArgumentException("Cannot sort on non-existent property path: " + propertyName);
+        }
+        List<Association> associations = new ArrayList<>(path.getAssociations());
+        int assocCount = associations.size();
+        // If last association is embedded, it does not need to be joined to the alias since it will be in the destination table
+        // JPA/Hibernate is special case and in that case we leave association for specific handling below
+        if (assocCount > 0 && computePropertyPaths() && associations.get(assocCount - 1) instanceof Embedded) {
+            associations.remove(assocCount - 1);
+        }
+
+        StringBuilder buff = new StringBuilder();
+        if (associations.isEmpty()) {
+            buff.append(getAliasName(entity));
+        } else {
+            StringJoiner joiner = new StringJoiner(".");
+            for (Association association : associations) {
+                joiner.add(association.getName());
+            }
+            String joinAlias = getAliasName(new JoinPath(joiner.toString(), associations.toArray(new Association[0]), Join.Type.DEFAULT, null));
+            if (!computePropertyPaths()) {
+                if (!query.contains(" " + joinAlias + " ") && !query.endsWith(" " + joinAlias)) {
+                    // Special hack case for JPA, Hibernate can join the relation with cross join automatically when referenced by the property path
+                    // This probably should be removed in the future major version
+                    buff.append(getAliasName(entity)).append(DOT);
+                    StringJoiner pathJoiner = new StringJoiner(".");
+                    for (Association association : associations) {
+                        pathJoiner.add(association.getName());
+                    }
+                    buff.append(pathJoiner);
+                } else {
+                    buff.append(joinAlias);
+                }
+            } else {
+                buff.append(joinAlias);
+            }
+        }
+        buff.append(DOT);
+
+        String jsonEntityColumn = getJsonEntityColumn(annotationMetadata);
+        if (jsonEntityColumn != null) {
+            buff.append(jsonEntityColumn).append(DOT);
+        }
+
+        if (!computePropertyPaths() || jsonEntityColumn != null) {
+            buff.append(path.getProperty().getName());
+        } else {
+            buff.append(getColumnName(path.getProperty()));
+        }
+
+        return buff.toString();
     }
 
     /**
